@@ -29,4 +29,4 @@
 VERSION = '@PACKAGE_VERSION@'
 DATADIR = '@DATADIR@/'
 LOCALEDIR = '@DATADIR@/locale'
-RELEASE_DATE = '2010-03-04'
+RELEASE_DATE = '2010-03-05'
